...
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8sp"
        android:weightSum="2">

        <Spinner
            android:id="@+id/filter_gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8sp"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <Spinner
            android:id="@+id/filter_specialty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8sp"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <Button
        android:id="@+id/filter_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Apply"
        android:textAllCaps="false"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
...
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/doctor_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    </LinearLayout>

</LinearLayout>
