...
        android:textSize="40sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="goToLoginPage"
        android:text="@string/login"
        android:layout_alignParentBottom="true"
...
